Ajax request for league creating, fixed showing error messages

--- a/web/createForm.html
+++ b/web/createForm.html
@@ -1,5 +1,5 @@
 <div class="col-xs-8">
-    <h1>Create own league.</h1>
+    <h2>Create League.</h2>
     <form id="create-league-form">
         <div class="input-group">
             <span class="input-group-addon">Name</span>
@@ -19,4 +19,3 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">Create League</button>
     </form>
 </div>
-<script src="js/Form.js"></script>
