--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,8 @@
         crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="js/NavBar.js"></script>
-<script src="js/LeagueList.js"></script>
+<script src="js/League.js"></script>
+<script src="js/LeaguesList.js"></script>
 <script src="js/Page.js"></script>
 <script src="js/main.js"></script>
 
