--- a/web/scoresTable.html
+++ b/web/scoresTable.html
@@ -1,14 +1,16 @@
-<table id="scores_table" class="table table-striped table-bordered">
-    <thead>
-        <tr>
-            <th>#</th>
-            <th>Player</th>
-            <th>Scores</th>
-            <th>Matches Played</th>
-        </tr>
-    </thead>
-    <tbody id="scores_body">
-    </tbody>
-</table>
+<div class="col-xs-8 col-xs-offset-2">
+    <table id="scores_table" class="table">
+        <thead>
+            <tr>
+                <th><span class="glyphicon glyphicon-king"></span></th>
+                <th>Player</th>
+                <th>Scores</th>
+                <th>Matches Played</th>
+            </tr>
+        </thead>
+        <tbody id="scores_body">
+        </tbody>
+    </table>
+</div>
 
 <button class="btn btn-primary col-xs-6 col-xs-offset-3" id="league-scores-link">Show Matches List</button>
